syntax = "proto3";
package public.account.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "public/account/v1/user.proto";

option go_package = "github.com/extreme-business/lingo/protogen/public/account/v1;account";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Lingo Account API";
    version: "1.0";
    contact: {
      name: "lingo";
      url: "https://github.com/extreme-business/lingo";
      email: "denniswethmar@gmail.com";
    };
    license: {
      name: "MIT License"
      url: "https://github.com/extreme-business/lingo/blob/main/LICENSE";
    };
  };
  host: "localhost:8092";
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        name: "Accountorization";
        in: IN_HEADER;
        description: "Enter the token with the `Bearer: ` prefix, e.g. Bearer abcde12345";
      };
    };
  };
};

service AccountService {
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc LogoutUser(LogoutUserRequest) returns (LogoutUserResponse) {
    option (google.api.http) = {post: "/v1/logout"};
  }

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {post: "/v1/refresh"};
  }

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      // The `parent` captures the parent resource name, such as "organizations/1".
      post: "/v1/{parent=organizations/*}/users"
      body: "user"
    };
  }

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      // The `parent` captures the parent resource name, such as "organizations/1".
      get: "/v1/{parent=organizations/*}/users"
    };
  }
}

message LoginUserRequest {
  oneof login {
    string email = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The email of a user"},
      (google.api.field_behavior) = REQUIRED
    ];
    string username = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The username of a user"},
      (google.api.field_behavior) = REQUIRED
    ];
  }

  string password = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The password of a user"},
    (google.api.field_behavior) = REQUIRED
  ];
}

message LoginUserResponse {
  public.account.v1.User user = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The user that was logged in"},
    (google.api.field_behavior) = REQUIRED
  ];
  string access_token = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The access token that was generated"},
    (google.api.field_behavior) = REQUIRED
  ];
  string refresh_token = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The refresh token that was generated"},
    (google.api.field_behavior) = REQUIRED
  ];
}

message LogoutUserRequest {}

message LogoutUserResponse {}

message RefreshTokenRequest {}

message RefreshTokenResponse {}

message CreateUserRequest {
  // Resource name of the parent resource where to create the user.
  // For example: "organizations/123"
  string parent = 1;
  // The user resource to be created. Client must not set the `User.name` field.
  public.account.v1.User user = 2;
}

message CreateUserResponse {
  public.account.v1.User user = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The user that was registered"},
    (google.api.field_behavior) = REQUIRED
  ];
}

message ListUsersRequest {
  // Resource name of the parent resource where to list the users.
  // For example: "organizations/123"
  string parent = 1;
}

message ListUsersResponse {
  // The users in the parent resource.
  repeated public.account.v1.User users = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The users in the parent resource"},
    (google.api.field_behavior) = REQUIRED
  ];
}
