syntax = "proto3";

package public.account.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/extreme-business/lingo/protogen/public/account/v1;account";

message User {
  // The user's unique identifier. example: users/dd69abd0-4f8b-4e53-9acd-4c38f87e7047
  string name = 1;
  // The user's display name.
  string display_name = 2;
  // The user's email.
  string email = 3;
  // The user's password.
  string password = 4;

  reserved 5 to 9;

  google.protobuf.Timestamp update_time = 10;
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp delete_time = 12;
}
